--- a/Lab 1/DE1_SoC.qsf
+++ b/Lab 1/DE1_SoC.qsf
@@ -964,14 +964,13 @@ set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_WE_N
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_RESET_N
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_CK_P
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_CK_N
-set_global_assignment -name SYSTEMVERILOG_FILE ../../EE371/syncDown.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../EE371/rippleUp.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../EE371/DFlipFlop.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../EE371/johnson.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE syncDown.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rippleUp.sv
+set_global_assignment -name SYSTEMVERILOG_FILE johnson.sv
 set_global_assignment -name SDC_FILE DE1_SoC.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE mux2_1.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux4_1.sv
 set_global_assignment -name SYSTEMVERILOG_FILE recognize3.sv
 set_global_assignment -name SYSTEMVERILOG_FILE recognize6.sv
 set_global_assignment -name SYSTEMVERILOG_FILE DE1_SoC.sv
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
